--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/jorda/.eclipse/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"/>
-=======
-	<classpathentry kind="lib" path="/Users/ds/Downloads/Code/Cognixia/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"/>
->>>>>>> 521d3fde37ded646d68efe44d3b9cfc9f625169b
 	<classpathentry kind="output" path="bin"/>
 </classpath>
